[gd_scene load_steps=22 format=3 uid="uid://bu3l4glfq6o7q"]

[ext_resource type="Script" path="res://src/ui/create_menu.gd" id="1_j5xmx"]
[ext_resource type="Script" path="res://src/ui/menu.gd" id="1_rn2lk"]
[ext_resource type="PackedScene" uid="uid://5y7pyobb8lj2" path="res://MenuItemGroep.tscn" id="2_j5xmx"]
[ext_resource type="PackedScene" uid="uid://l0omggrymilv" path="res://resources/scenes/ui/menu_item.tscn" id="3_jekvr"]
[ext_resource type="StyleBox" uid="uid://ct0u5h7r7p8pk" path="res://resources/theme/LetterTeal.tres" id="4_opwpx"]
[ext_resource type="FontFile" uid="uid://dhnbw5oo8o7x1" path="res://assets/fonts/PeaberryBase.ttf" id="5_owi1m"]
[ext_resource type="StyleBox" uid="uid://c3bhetx1gl4iu" path="res://resources/theme/LetterAMber.tres" id="6_moknx"]
[ext_resource type="Script" path="res://src/ui/recepies.gd" id="7_dmlva"]
[ext_resource type="PackedScene" uid="uid://dsd27kpf3r8qq" path="res://resources/scenes/ui/recipe_button.tscn" id="8_ui8kx"]
[ext_resource type="Script" uid="uid://bji5yu2s1nuwk" path="res://src/ui/info.gd" id="9_n800v"]
[ext_resource type="PackedScene" uid="uid://bio6b6ctbygk3" path="res://resources/scenes/ingredient.tscn" id="10_qgosu"]
[ext_resource type="Texture2D" uid="uid://dpnxh80u2hqot" path="res://assets/ui/GUI_1.1/White/x2/DropdownList_icon.png" id="11_ilfus"]
[ext_resource type="Texture2D" uid="uid://b2euxa1l67isi" path="res://assets/ui/GUI_1.1/Icons/x4/Icon_plus.png" id="12_5bw3x"]
[ext_resource type="Texture2D" uid="uid://bfqn5sxga2ig7" path="res://assets/ui/GUI_1.1/Icons/x4/Icon_minus.png" id="13_terk4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvejy"]
bg_color = Color(0.6, 0.6, 0.6, 0.32549)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mxkbr"]
bg_color = Color(0.831761, 0.831761, 0.831761, 1)
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color(0.510601, 0.510601, 0.510601, 1)
border_blend = true
corner_detail = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dh6n2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jj8el"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y53mw"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fxuaf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqjrp"]
bg_color = Color(1, 1, 1, 0.223529)

[node name="MenuScreen" type="CanvasLayer"]
script = ExtResource("1_j5xmx")
metadata/_edit_vertical_guides_ = [1111.0, 598.0]

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jvejy")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Menu" type="Panel" parent="PanelContainer/MarginContainer/HBoxContainer" node_paths=PackedStringArray("menuSlots")]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_mxkbr")
script = ExtResource("1_rn2lk")
baseMenuGroup = ExtResource("2_j5xmx")
baseMenuItem = ExtResource("3_jekvr")
menuSlots = {
"desert": NodePath("VBoxContainer/CenterContainer2/MarginContainer/VBoxContainer/Panel/MarginContainer/ScrollContainer/MenuRows/Desert"),
"main": NodePath("VBoxContainer/CenterContainer2/MarginContainer/VBoxContainer/Panel/MarginContainer/ScrollContainer/MenuRows/Main"),
"side": NodePath("VBoxContainer/CenterContainer2/MarginContainer/VBoxContainer/Panel/MarginContainer/ScrollContainer/MenuRows/Side"),
"stew": NodePath("VBoxContainer/CenterContainer2/MarginContainer/VBoxContainer/Panel/MarginContainer/ScrollContainer/MenuRows/Stew")
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer"]
z_index = 1
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 35
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer"]
layout_mode = 2

[node name="TileLetterContainer" type="Panel" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_dh6n2")

[node name="TileLetterContainer" type="Panel" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer/HBoxContainer/TileLetterContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.141372
theme_override_styles/panel = ExtResource("4_opwpx")

[node name="Letter" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer/HBoxContainer/TileLetterContainer/TileLetterContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_owi1m")
theme_override_font_sizes/font_size = 40
text = "D"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="TileLetterContainer4" type="Panel" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_jj8el")

[node name="TileLetterContainer2" type="Panel" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer/HBoxContainer/TileLetterContainer4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.06
offset_top = -25.0
offset_right = 20.94
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.198968
theme_override_styles/panel = ExtResource("6_moknx")

[node name="Letter" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer/HBoxContainer/TileLetterContainer4/TileLetterContainer2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_owi1m")
theme_override_font_sizes/font_size = 40
text = "i
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="TileLetterContainer3" type="Panel" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_dh6n2")

[node name="TileLetterContainer" type="Panel" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer/HBoxContainer/TileLetterContainer3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.0506145
theme_override_styles/panel = ExtResource("4_opwpx")

[node name="Letter" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer/HBoxContainer/TileLetterContainer3/TileLetterContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_owi1m")
theme_override_font_sizes/font_size = 40
text = "n"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="TileLetterContainer2" type="Panel" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_jj8el")

[node name="TileLetterContainer2" type="Panel" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer/HBoxContainer/TileLetterContainer2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.197222
theme_override_styles/panel = ExtResource("6_moknx")

[node name="Letter" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer/HBoxContainer/TileLetterContainer2/TileLetterContainer2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_owi1m")
theme_override_font_sizes/font_size = 40
text = "e
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="TileLetterContainer5" type="Panel" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_dh6n2")

[node name="TileLetterContainer" type="Panel" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer/HBoxContainer/TileLetterContainer5"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 31.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("4_opwpx")

[node name="Letter" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer/MarginContainer/HBoxContainer/TileLetterContainer5/TileLetterContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_owi1m")
theme_override_font_sizes/font_size = 40
text = "r"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="CenterContainer2" type="CenterContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer2"]
layout_mode = 2
theme_override_constants/margin_top = -45

[node name="VBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer2/MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer2/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 500)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_y53mw")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer2/MarginContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.144
anchor_top = 0.094
anchor_right = 0.963
anchor_bottom = 1.0
offset_left = -57.6
offset_top = -47.0
offset_right = 14.8
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 15

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer2/MarginContainer/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2

[node name="MenuRows" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer2/MarginContainer/VBoxContainer/Panel/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Side" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer2/MarginContainer/VBoxContainer/Panel/MarginContainer/ScrollContainer/MenuRows" instance=ExtResource("2_j5xmx")]
layout_mode = 2
group_name = "-SIDE-"

[node name="Main" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer2/MarginContainer/VBoxContainer/Panel/MarginContainer/ScrollContainer/MenuRows" instance=ExtResource("2_j5xmx")]
layout_mode = 2
group_name = "-MAIN COURSE-"

[node name="Stew" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer2/MarginContainer/VBoxContainer/Panel/MarginContainer/ScrollContainer/MenuRows" instance=ExtResource("2_j5xmx")]
layout_mode = 2
group_name = "-STEWS N SOUPS-"

[node name="Desert" parent="PanelContainer/MarginContainer/HBoxContainer/Menu/VBoxContainer/CenterContainer2/MarginContainer/VBoxContainer/Panel/MarginContainer/ScrollContainer/MenuRows" instance=ExtResource("2_j5xmx")]
layout_mode = 2
group_name = "-DESERT-"

[node name="Recepies" type="Panel" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_fxuaf")
script = ExtResource("7_dmlva")
baseButton = ExtResource("8_ui8kx")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 310)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nqjrp")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.134
anchor_top = 0.292
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -68.876
offset_top = -90.52
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Panel/MarginContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Recepies" type="GridContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Panel/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 300)
layout_mode = 2
columns = 5

[node name="Info" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer" node_paths=PackedStringArray("addButton")]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 4
script = ExtResource("9_n800v")
baseIngredient = ExtResource("10_qgosu")
addButton = NodePath("Container/AddButton")

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info"]
z_index = 88
layout_mode = 0
offset_left = 178.0
offset_top = -411.0
offset_right = 238.0
offset_bottom = -377.0
text = "Close
"

[node name="Container" type="Control" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info"]
anchors_preset = 0

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
layout_mode = 0
offset_left = -256.0
offset_top = 5.0
offset_right = -46.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 25
text = "dsddsdsdsdsdssd"

[node name="subtitle" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
layout_mode = 0
offset_left = -256.0
offset_top = 39.0
offset_right = -121.0
offset_bottom = 62.0
text = "dsddsdsdsdsdssd"

[node name="Price" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
layout_mode = 0
offset_left = -140.0
offset_top = 69.0
offset_right = -5.0
offset_bottom = 92.0
text = "Price:"

[node name="priceVal" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
layout_mode = 0
offset_left = -71.0
offset_top = 70.0
offset_right = 64.0
offset_bottom = 93.0
text = "Price:"

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
layout_mode = 0
offset_left = -140.0
offset_top = 92.0
offset_right = -5.0
offset_bottom = 115.0
text = "Level:"

[node name="levelVal" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
layout_mode = 0
offset_left = -71.0
offset_top = 93.0
offset_right = 64.0
offset_bottom = 116.0
text = "Price:"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
layout_mode = 0
offset_left = -140.0
offset_top = 114.0
offset_right = -5.0
offset_bottom = 137.0
text = "Makes"

[node name="makesVal" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
layout_mode = 0
offset_left = -71.0
offset_top = 115.0
offset_right = 64.0
offset_bottom = 138.0
text = "Makes"

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
layout_mode = 0
offset_left = -140.0
offset_top = 140.0
offset_right = -5.0
offset_bottom = 163.0
text = "Mastery"

[node name="masteryVal" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
layout_mode = 0
offset_left = -71.0
offset_top = 141.0
offset_right = 64.0
offset_bottom = 164.0
text = "Makes"

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
layout_mode = 0
offset_left = -253.0
offset_top = 60.0
offset_right = -157.0
offset_bottom = 157.0
texture = ExtResource("11_ilfus")

[node name="TextEdit" type="TextEdit" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
layout_mode = 0
offset_left = 100.0
offset_top = 174.0
offset_right = 157.0
offset_bottom = 210.0
text = "1"

[node name="Ingredients" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
layout_mode = 0
offset_left = 20.0
offset_top = 79.0
offset_right = 243.0
offset_bottom = 166.0

[node name="Add" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 0
offset_left = 157.0
offset_top = 175.0
offset_right = 189.0
offset_bottom = 210.0
texture_normal = ExtResource("12_5bw3x")
stretch_mode = 4

[node name="Remove" type="TextureButton" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 0
offset_left = 56.0
offset_top = 174.0
offset_right = 88.0
offset_bottom = 209.0
texture_normal = ExtResource("13_terk4")
stretch_mode = 4

[node name="AddButton" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container"]
layout_mode = 0
offset_left = 197.0
offset_top = 174.0
offset_right = 257.0
offset_bottom = 208.0
text = "Add"

[node name="chosen" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info"]
layout_mode = 0
offset_left = -343.0
offset_top = -401.0
offset_right = -208.0
offset_bottom = -378.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Makes"

[node name="chosen2" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info"]
layout_mode = 0
offset_left = -397.0
offset_top = -402.0
offset_right = -262.0
offset_bottom = -379.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "meals:"

[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="text_changed" from="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container/TextEdit" to="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info" method="_on_text_edit_text_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container/Add" to="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info" method="_on_add_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container/Remove" to="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info" method="_on_remove_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info/Container/AddButton" to="PanelContainer/MarginContainer/HBoxContainer/Recepies/MarginContainer/VBoxContainer/Info" method="_on_button_pressed"]
